# bkhack

./: .firebaserc  .gitignore  .gitmodules  README.md  bkhack.opam  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  preprocessor.js  shell.nix
.storybook/: main.js
build_aux/: webpack_preprocessor.js
buildlib/: buildlib.ml  dune
doc/: PRState.mmd  design-notes.mdx  stateDiagram.mmd  todo-v0_2.md  todo-v3_0.md
doc/thesis-week-1/: main.qd
doc/thesis-week-15/: bachkhoa.qd  main.qd
doc/thesis-week-15/assets/diagrams/: UML-module_view.puml  UML-sitemap.puml  UML-style_layering.puml  UML-usecase.puml  erd.puml  system-arch.drawio  system-arch.puml
doc/thesis-week-2-ml/: main.qd
public/: index.html  reset.css
public/font/liberation_mono/: demo.html  stylesheet.css
public/inter/: inter.css
public/item/: index.html
public/styles/: reset.css  tailwind.css  variables.css  widget-variables.css
public/styles/components/: command.css  headerbar.css  sidebar.css
scripts/: bundle.ml  dune  serve.ml
service/: Dockerfile  README.md  mix.exs  serve.py
service/lib/: app.ex
src/: App.re  Component__sidebar.re  Env.re  Fetch_syntax.re  Header.re  Header.rei  Item.re  Page__app.re  Page__item.re  T.re  dune
vendors/containers/core/: CCArray.ml  CCArray.mli  CCArrayLabels.mli  containersLabels.ml  dune  melange__containers.ml
vendors/containers/core/tests/: dune
vendors/containers/monomorphic/: dune
