opam-version: "2.4"
synopsis: "BK Hack website"
authors: ["ttb-hcmut"]
depends: [
  "ocaml"
  "reason" {>= "3.13.0"}
  "dune" {>= "3.9"}
  "melange" {>= "4.0.0"}
	"melange-fetch"
	"melange-json"
  "reason-react" {>= "0.15.0"}
  "reason-react-ppx"
  "eio"
  "eio_main"
  "containers"
  "opam-check-npm-deps" {with-dev-setup}
  "ocaml-lsp-server" {with-dev-setup}
  "dot-merlin-reader" {with-dev-setup}
  "odoc" {with-doc}
]
